--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,29 +1,3 @@
-// {
-//   "compilerOptions": {
-//     "target": "ES2020",
-//     "module": "commonjs",
-//     "lib": ["ES2020"],
-//     "outDir": "./dist",
-//     "rootDir": "./src",
-//     "strict": true,
-//     "esModuleInterop": true,
-//     "skipLibCheck": true,
-//     "forceConsistentCasingInFileNames": true,
-//     "resolveJsonModule": true,
-//     "declaration": true,
-//     "declarationMap": true,
-//     "sourceMap": true
-//   },
-//   "include": ["src/**/*"],
-//   "exclude": ["node_modules", "dist"]
-// }
-
-
-
-
-
-// FILE: backend/tsconfig.json
-// ============================================
 {
   "compilerOptions": {
     "target": "ES2020",
@@ -39,5 +13,5 @@
     "moduleResolution": "node"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
